--- a/asset/index.html
+++ b/asset/index.html
@@ -15,7 +15,7 @@
     <div class="top">
       <header>
         <h2 class="display-2">Budget Holidays.com</h2>
-        <p class="lead">We Take The Worry Of Planning Holidays With As Little As £50/Month</p>
+        <p class="lead">We Take The Worry Of Planning Your Next Holiday Destination! </p>
       </header>
     </div>
     <div class="box1"> 
@@ -23,7 +23,7 @@
       <div class="col coast">
           <input class="form-check-input" type="radio"  name="holiday-preference" id="rd1"  value="Vacation By The Coast">
             <label class="form-check-label" for="vacation">
-                <h4>Vacation By The Coast</h4>
+                <p class="lead">Vacation By The Coast</p>
               </label>
               
       </div>
@@ -32,7 +32,7 @@
       <div class="col city">
           <input class="form-check-input" type="radio"  name="holiday-preference" id="rd2"  value="City Tour Vacation">
               <label class="form-check-label" for="city">
-                <h4>City Tour Vacation</h4>
+                <p class="lead">City Tour Vacation</p>
               </label>
       </div>
       <div>
@@ -52,7 +52,7 @@
             <tr>
               <th scope="col">Location</th>
               <th scope="col">Price</th>
-              <th scope="col" hidden = true>Preferance</th>
+              <th scope="col" hidden >Preferance</th>
               <th scope="col">Booking Tel.</th>
             </tr>
           </thead>
