--- a/asset/Home.html
+++ b/asset/Home.html
@@ -6,16 +6,27 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
 
-  <title>Document</title>
+  <title>Budget Holidays Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
 </head>
 <body onload="bodyLoaded();">
+  <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+    <div class="container ps-5">
+      <ul class="navbar-nav me-auto">
+        <li class="nav-item"><a class="nav-link active" href="Home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link " href="About-us.html">About us</a></li>
+      </ul>
+    </div>
+  </nav>
   <div class="main-page">
     <div class="top">
-      <header>
-        <h2 class="display-2">Budget Holidays.com</h2>
-        <p class="lead">We Take The Worry Of Planning Your Next Holiday Destination! </p>
+      <header class="container-fluid">
+        <div>
+          <h2 class="display-2">Budget Holidays.com</h2>
+          <p class="lead">We Take The Worry Of Planning Your Next Holiday Destination! </p>
+          <p class="lead">Get <b>15% off</b> your first holiday when you sign up</p>
+        </div>
       </header>
     </div>
     <div class="box1"> 
@@ -44,9 +55,12 @@
   </div>
   <div class="">
     
-    <div class="result-area">
+    <div class="result-area" id="results">
       <header>
         <h2 class="display-2">You Deserve A Break</h2>
+        <div class="d-grid gap-2 col-6 mx-auto">
+          <button class="btn btn-primary" type="button" onclick="handleHide()">Close Searched Results</button>
+        </div>
         <table class="table">
           <thead id="myTableHead">
             <tr>
