script index,css modification

--- a/asset/About-us.html
+++ b/asset/About-us.html
@@ -21,7 +21,7 @@
   </nav>
   <div class="content-box container-fluid">
     <div class="page-content">
-      <div><h1>About Us</h1></div>
+      <div><h1></h1></div>
       <div class="content">
         <h3>About BudgetHolidays.com</h3>
         <p class="lead">At BudgetHolidays.com, we believe that travel should be accessible to everyone. Our mission is to empower wanderers, adventure seekers, and dreamers by providing budget-friendly travel experiences. Here’s our story:</p>
