--- a/asset/Home.html
+++ b/asset/Home.html
@@ -25,7 +25,8 @@
         <div>
           <h2 class="display-2">Budget Holidays.com</h2>
           <p class="lead">We Take The Worry Of Planning Your Next Holiday Destination! </p>
-          <p class="lead">Get <b>15% off</b> your first holiday when you sign up</p>
+          <p class="lead">Your Search Preferences Connects you to Various Options and Cities</p>
+          <p class="lead">Contact the Hosts By Telephone For More Enquiries...</p>
         </div>
       </header>
     </div>
@@ -34,7 +35,7 @@
       <div class="col coast">
           <input class="form-check-input" type="radio"  name="holiday-preference" id="rd1"  value="Vacation By The Coast">
             <label class="form-check-label" for="vacation">
-                <p class="lead">Vacation By The Coast</p>
+                <p class="lead"><b>Vacation By The Coast</b></p>
               </label>
               
       </div>
@@ -43,7 +44,7 @@
       <div class="col city">
           <input class="form-check-input" type="radio"  name="holiday-preference" id="rd2"  value="City Tour Vacation">
               <label class="form-check-label" for="city">
-                <p class="lead">City Tour Vacation</p>
+                <p class="lead"><b>City Tour Vacation</b></p>
               </label>
       </div>
       <div>
