--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
   <title>Budget Holidays Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="asset/style.css">
 </head>
 <body onload="bodyLoaded();">
   <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
     <div class="container ps-5">
       <ul class="navbar-nav me-auto">
-        <li class="nav-item"><a class="nav-link active" href="Home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link " href="About-us.html">About us</a></li>
       </ul>
     </div>
