removal of handle submit funct

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </ul>
         </div>
     </nav>
-    <div class="container-fluid main-page">
+    <div class="container-fluid main-page text-center">
         <div class="row">
             <div class="col-xs-12 col-md-12">
                 <h2 class="display-2">Budget Holidays.com</h2>
@@ -50,7 +50,7 @@
     </div>
     <div class="result-area" id="results">
       <header>
-        <h2 class="display-2">You Deserve A Break</h2>
+        <h2 class="display-2 text-center">You Deserve A Break</h2>
         <div class="d-grid gap-2 col-6 mx-auto">
           <button class="btn btn-primary" type="button" onclick="handleHide()">Close Searched Results</button>
         </div>
